--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-test-exception-handler",
+  "name": "@dzek69/rn-test-exception-handler",
   "version": "1.3.2",
   "description": "",
   "main": "index.js",
