--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,5 +11,5 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:+'
 }
